--- a/login.html
+++ b/login.html
@@ -21,14 +21,14 @@
         <div class="card card-login mx-auto mt-5">
             <div class="card-header">Login</div>
             <div class="card-body">
-                <form>
+                <form id="form-login" method="post">
                     <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email">
+                        <label for="user-tf">Username</label>
+                        <input class="form-control" id="user-tf" type="email" placeholder="Username" , name="user">
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input class="form-control" id="exampleInputPassword1" type="password" placeholder="Password">
+                        <label for="pass-tf">Password</label>
+                        <input class="form-control" id="pass-tf" type="password" placeholder="Password" , name="pass">
                     </div>
                     <div class="form-group">
                         <div class="form-check">
@@ -36,20 +36,24 @@
                 <input class="form-check-input" type="checkbox"> Remember Password</label>
                         </div>
                     </div>
-                    <a class="btn btn-primary btn-block" href="index.html">Login</a>
+                    <button class="btn btn-primary btn-block" type="submit">Login</a>
                 </form>
                 <div class="text-center">
-                    <a class="d-block small mt-3" href="register.html">Register an Account</a>
-                    <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+                    <a class="d-block small mt-3" href="/signup">Register an Account</a>
+                    <a class="d-block small" href="#">Forgot Password?</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
+    <!-- Page Core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!-- Backend JavaScript-->
+    <script src="public/js/views/login.js"></script>
+    <script src="public/js/controllers/loginController.js"></script>
+    <script src="public/js/form-validators/loginValidator.js"></script>
+    <script src="public/js/form-validators/emailValidator.js"></script>
 </body>
 
 </html>
