--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                 <form id="form-login" method="post">
                     <div class="form-group">
                         <label for="user-tf">Username</label>
-                        <input class="form-control" id="user-tf" type="email" placeholder="Username" , name="user">
+                        <input class="form-control" id="user-tf" type="text" placeholder="Username" , name="user">
                     </div>
                     <div class="form-group">
                         <label for="pass-tf">Password</label>
