--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
                 <input class="form-check-input" type="checkbox"> Remember Password</label>
                         </div>
                     </div>
-                    <button class="btn btn-primary btn-block" type="submit">Login</a>
+                    <button class="btn btn-primary btn-block" type="submit">Login</a></button>
                 </form>
                 <div class="text-center">
                     <a class="d-block small mt-3" href="/signup">Register an Account</a>
