--- a/login.html
+++ b/login.html
@@ -46,9 +46,12 @@
         </div>
     </div>
     <!-- Page Core JavaScript-->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+    <!--<script src="vendor/jquery/jquery.min.js"></script>-->
+    <!--<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
+    <!--<script src="vendor/jquery-easing/jquery.easing.min.js"></script>-->
+    <script src="public/vendor/jquery-2.2.3.min.js"></script>
+    <script src="public/vendor/jquery.form.min.js"></script>
+    <script src="public/vendor/bootstrap.min.js"></script>
     <!-- Backend JavaScript-->
     <script src="public/js/views/login.js"></script>
     <script src="public/js/controllers/loginController.js"></script>
