--- a/login.html
+++ b/login.html
@@ -24,11 +24,11 @@
                 <form id="form-login" method="post">
                     <div class="form-group">
                         <label for="user-tf">Username</label>
-                        <input class="form-control" id="user-tf" type="text" placeholder="Username" , name="user">
+                        <input class="form-control" id="user-tf" type="text" placeholder="Username" name="user">
                     </div>
                     <div class="form-group">
                         <label for="pass-tf">Password</label>
-                        <input class="form-control" id="pass-tf" type="password" placeholder="Password" , name="pass">
+                        <input class="form-control" id="pass-tf" type="password" placeholder="Password" name="pass">
                     </div>
                     <div class="form-group">
                         <div class="form-check">
