--- a/dash.html
+++ b/dash.html
@@ -648,11 +648,20 @@
             </div>
         </div>
         <!-- Bundled Scripts-->
-        <script src="bundle.js"></script>
+        <!--<script src="bundle.js"></script>-->
         <!-- Custom Onload Scripts-->
-        <script src="page-onload.js"></script>
-        <!-- Bootstrap core JavaScript-->
-        <script src="vendor/jquery/jquery.min.js"></script>
+        <!--<script src="page-onload.js"></script>-->
+        <!-- Backend JavaScript-->
+        <script src="public/js/views/home.js"></script>
+        <script src="public/js/controllers/homeController.js"></script>
+
+        <!-- Vendor JavaScript-->
+        <script src="public/vendor/jquery-2.2.3.min.js"></script>
+        <script src="public/vendor/jquery.form.min.js"></script>
+        <script src="public/vendor/bootstrap.min.js"></script>
+
+
+        <!--<script src="vendor/jquery/jquery.min.js"></script>-->
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
         <!-- Core plugin JavaScript-->
         <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
