--- a/dash.html
+++ b/dash.html
@@ -661,7 +661,7 @@
         <!-- Backend JavaScript-->
         <script src="public/js/views/home.js"></script>
         <script src="public/js/controllers/homeController.js"></script>
-
+        <script src="public/js/form-validators/accountValidator.js"></script>
 
         <!--<script src="vendor/jquery/jquery.min.js"></script>-->
         <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
