--- a/dash.html
+++ b/dash.html
@@ -17,10 +17,10 @@
     <!-- Custom styles for this template-->
     <link href="css/sb-admin.css" rel="stylesheet">
     <!-- Dynamic Graphs -->
-    <script src="static-currency-graphs.js"></script>
+    <!--<script src="static-currency-graphs.js"></script>-->
 </head>
 
-<body class="fixed-nav sticky-footer bg-dark" id="page-top" onload="indexOnload()">
+<body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
         <a class="navbar-brand" href="index.html">Air Quality</a>
